# aiogram_template

./: .gitignore  Dockerfile  README.adoc  README.md  alembic.ini  dev.requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  test.yml
app/: __main__.py
app/config/: __init__.py  db.py  logging_config.py  main.py
app/core/: exceptions.py  identity.py
app/dao/: __init__.py  base.py  chat.py  holder.py  user.py
app/di/: __init__.py  bot.py  config.py  db.py  utils.py
app/enums/: __init__.py
app/handlers/: __init__.py  base.py  echo.py  errors.py  superuser.py
app/mapper/: chat_mapper.py  user_mapper.py
app/middlewares/: __init__.py  db_middleware.py
app/models/config/: __init__.py  db.py  main.py  storage.py
app/models/db/: __init__.py  base.py  chat.py  user.py
app/models/dto/: __init__.py  chat.py  user.py
app/services/: chat.py  foo.py  user.py
app/tgbot/: __main__.py  main_factory.py
app/tgbot/filters/: superusers.py
app/tgbot/handlers/: __init__.py  base.py  errors.py  superuser.py
app/tgbot/middlewares/: __init__.py  data_load_middleware.py
app/tgbot/services/: chat.py  identity.py
app/tgbot/utils/: mappers.py  router.py
config_dist/: config.yaml  db.yaml  logging.yaml
migrations/: env.py
migrations/versions/: 20230719-103955_0d453e730ac5_add_users.py  20230719-104140_812049d3a1da_add_chats.py  4e570bc94610_add_table_users.py  e96680055f08_add_table_chats.py
tests/: common.py  conftest.py
tests/config/: alembic.ini  config.yaml  db.yaml
tests/fixtures/: chat_constants.py  user_constants.py
tests/integration/: __init__.py  conftest.py  test_save_chat.py  test_save_user.py  test_stairway.py
tests/integration/e2e/: test_base.py  test_start.py
tests/mocks/: config.py
tests/unit/mapper/: test_chat_mapper.py  test_user_mapper.py
tests/utils/: chat.py  user.py
